Telgram Integration initial codebase commit

--- a/.env
+++ b/.env
@@ -11,5 +11,5 @@ MADE_WITH=
 
 # note: .env is a shell file so there can't be spaces around =
 
-AUTH_TOKEN=1156025892:AAHTMafPt-lQvnFSpbn7Ll5qxwYWCiRkJv0
+AUTH_TOKEN=
 PORT=3000
