--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@telegraf/session": "^1.0.0",
+    "@vitalets/google-translate-api": "^3.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "request": "^2.88.2",
